// Copyright 2024 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;
option go_package = "github.com/pipe-cd/pipecd/pkg/model";

message DeploymentSource {
  // The application directory where the source code is located.
  string application_directory = 1;
  // The git commit revision of the source code.
  string revision = 2;
  // The configuration of the application which is independent for plugins.
  GenericApplicationSpec generic_application_config = 3;
  // The configuration of the application which is specific for plugins.
  PluginApplicationSpec application_config = 4; 
}

message GenericApplicationSpec {
  // TODO: Add more fields to support generic application spec.
}

message PluginApplicationSpec {
  // The kind of the application spec.
  string kind = 1;
  // The version of the application spec.
  string api_version = 2;

  // The raw data of the application spec.
  // We store this spec in bytes because we don't want to define the structure of the plugin-specific config.
  // The serialization format is JSON.
  bytes spec = 3;
}
